--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^2.0.4",
+    "ngx-webstorage-service": "^3.1.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
